Changelog
=========

1.0 - Unreleased
----------------

* added transmogrify.dexterity
* added plone.app.toolbar
* changed profile titles
* changed pipeline to import test content
* added simplemanagement and other dependencies