@@ -47,6 +47,6 @@ eggs = ${instance:eggs}
 
 
 [sources]
-abstract.simplemanagement = git ${buildout:giturl}abstract-open-solutions/abstract.simplemanagement.git
+collective.simplemanagement = git ${buildout:giturl}collective/collective.simplemanagement.git
 abstract.z3cform.usertokeninput = git ${buildout:giturl}abstract-open-solutions/abstract.z3cform.usertokeninput.git
 
