@@ -1,7 +1,7 @@
 _path,_type,ct_type,title,_transitions,description,operatives,creators,start,end,budget,initial_estimate,customer,notes,text,estimate,assigned_to,repositories,environments,milestones,is_external,date,time
 /projects,Folder,archetype,Progetti,publish,Una cartella contentente i progetti,,admin,,,,,,,,,,,,,,,
 /documentation,Folder,archetype,Documentazione,publish,Una cartella contentente documentazione generica,,admin,,,,,,,,,,,,,,,
-/projects/progetto1,Project,dexterity,Progetto 1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod","(('account', u'admin'), ('designer', u'admin'))",admin,,,10,12,Customer 2,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,,,"(u'https://github.com/abstract-open-solutions/simplemanagement.policy', u'https://github.com/abstract-open-solutions/abstract.simplemanagement')","((u'Demo Plone 4', 'prototype', 'http://plone4.abstract.it'), (u'Official site', 'production', 'http://www.abstract.it'), (u'Open abstract', 'production', 'http://open.abstract.it/'))","((u'Step 1', 'production'), (u'Step 2', 'maintenance'),)",1,,
+/projects/progetto1,Project,dexterity,Progetto 1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod","(('account', u'admin'), ('designer', u'admin'))",admin,,,10,12,Customer 2,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,,,"(u'https://github.com/abstract-open-solutions/simplemanagement.policy', u'https://github.com/collective/collective.simplemanagement')","((u'Demo Plone 4', 'prototype', 'http://plone4.abstract.it'), (u'Official site', 'production', 'http://www.abstract.it'), (u'Open abstract', 'production', 'http://open.abstract.it/'))","((u'Step 1', 'production'), (u'Step 2', 'maintenance'),)",1,,
 /projects/progetto1/iteration1,Iteration,dexterity,Iterazione 1.1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,2012-07-12,2012-07-24,,,,,,,,,,,,,
 /projects/progetto1/iteration1/story1,Story,dexterity,Storia 1.1.1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",3,admin,,,,,,
 /projects/progetto1/iteration1/story1/booking1,Booking,dexterity,Booking 1.1.1.1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,,,,,,,,2012-07-12,1
@@ -26,7 +26,7 @@ _path,_type,ct_type,title,_transitions,description,operatives,creators,start,end
 /projects/progetto1/iteration4/story2,Story,dexterity,Storia 1.4.2,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",5,admin,,,,,,
 /projects/progetto1/iteration4/story3,Story,dexterity,Storia 1.4.3,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",2,admin,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,
-/projects/progetto2,Project,dexterity,Progetto 2,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod","(('account', u'admin'), ('designer', u'admin'))",admin,,,10,12,Customer 2,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,,,"(u'https://github.com/abstract-open-solutions/simplemanagement.policy', u'https://github.com/abstract-open-solutions/abstract.simplemanagement')","((u'Demo Plone 4', 'prototype', 'http://plone4.abstract.it'), (u'Official site', 'production', 'http://www.abstract.it'), (u'Open abstract', 'production', 'http://open.abstract.it/'))","((u'Step 1', 'production'), (u'Step 2', 'maintenance'),)",0,,
+/projects/progetto2,Project,dexterity,Progetto 2,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod","(('account', u'admin'), ('designer', u'admin'))",admin,,,10,12,Customer 2,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,,,"(u'https://github.com/abstract-open-solutions/simplemanagement.policy', u'https://github.com/collective/collective.simplemanagement')","((u'Demo Plone 4', 'prototype', 'http://plone4.abstract.it'), (u'Official site', 'production', 'http://www.abstract.it'), (u'Open abstract', 'production', 'http://open.abstract.it/'))","((u'Step 1', 'production'), (u'Step 2', 'maintenance'),)",0,,
 /projects/progetto2/iteration1,Iteration,dexterity,Iterazione 2.1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,2012-07-12,2012-07-24,,,,,,,,,,,,,
 /projects/progetto2/iteration1/story1,Story,dexterity,Storia 2.1.1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",3,admin,,,,,,
 /projects/progetto2/iteration1/story1/booking1,Booking,dexterity,Booking 2.1.1.1,publish,"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod",,admin,,,,,,,,,,,,,,2012-07-12,1
