@@ -2,7 +2,7 @@
   <version>1.0</version>
     <dependencies>
       <dependency>profile-collective.contentleadimage:default</dependency>
-      <dependency>profile-abstract.simplemanagement:default</dependency>
+      <dependency>profile-collective.simplemanagement:default</dependency>
       <!-- <dependency>profile-plone.app.toolbar:default</dependency> -->
       <dependency>profile-collective.quickupload:default</dependency>
       <!-- suggested dependencies -->
